# iggy-cluster-sandbox

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: client.rs  cluster_client.rs  command_handler.rs  command_parser.rs  main.rs
configs/: config.toml  node1.toml  node2.toml  node3.toml
node/: Cargo.toml
node/src/: command.rs  error.rs  main.rs  types.rs
node/src/client/: cluster_node_client.rs  mod.rs
node/src/clusters/: cluster.rs  cluster_elections.rs  cluster_info.rs  cluster_node_client.rs  election.rs  heartbeats.rs  mod.rs  node.rs  node_client.rs  state.rs
node/src/clusters/clients/: mod.rs  sender.rs
node/src/clusters/elections/: cluster_elections.rs  election.rs  mod.rs
node/src/clusters/nodes/: cluster_nodes.rs  mod.rs  node.rs
node/src/clusters/nodes/clients/: mod.rs  node_client.rs  sender.rs
node/src/clusters/streams/: cluster_streams.rs  messages.rs  mod.rs  state.rs
node/src/commands/: append_data.rs  append_message.rs  command.rs  hello.rs  mod.rs  ping.rs
node/src/configs/: config.rs  config_provider.rs  mod.rs
node/src/connection/: handler.rs  mod.rs  tcp_connection.rs  tcp_handler.rs
node/src/handlers/: append_entries_handler.rs  append_messages_handler.rs  create_stream_handler.rs  delete_stream_handler.rs  get_metadata_handler.rs  get_node_state_handler.rs  get_streams_handler.rs  heartbeat_handler.rs  hello_handler.rs  load_state_handler.rs  mod.rs  ping_handler.rs  poll_messages_handler.rs  request_vote_handler.rs  send_vote_handler.rs  sync_created_stream_handler.rs  sync_messages_handler.rs  update_leader_handler.rs
node/src/models/: appended_messages.rs  mod.rs
node/src/server/: command_handler.rs  mod.rs  public_server.rs  sync_server.rs  tcp_connection.rs  tcp_handler.rs  tcp_listener.rs  tcp_sender.rs  tcp_server.rs
node/src/streaming/: data_appender.rs  file.rs  messages.rs  mod.rs  stream.rs  streamer.rs
sdk/: Cargo.toml
sdk/src/: bytes_serializable.rs  error.rs  lib.rs  timestamp.rs
sdk/src/clients/: cluster_client.rs  mod.rs  node_client.rs
sdk/src/commands/: append_entries.rs  append_messages.rs  command.rs  create_stream.rs  delete_stream.rs  get_metadata.rs  get_node_state.rs  get_streams.rs  heartbeat.rs  hello.rs  load_state.rs  mod.rs  ping.rs  poll_messages.rs  request_vote.rs  send_vote.rs  sync_created_stream.rs  sync_messages.rs  update_leader.rs
sdk/src/models/: appended_state.rs  log_entry.rs  message.rs  metadata.rs  mod.rs  node_state.rs  stream.rs
