[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
bytes = "1.5.0"
chrono = "0.4.30"
futures = "0.3.30"
monoio = { version = "0.2.2", features = ["async-cancel", "sync", "signal", "tracing", "zero-copy", "bytes", "iouring", "legacy", "macros", "utils"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
thiserror = "1.0.50"
tracing = { version = "0.1.40" }
time = { version = "0.3.30", features = [] }